--- a/Recitations/Recitations.tex
+++ b/Recitations/Recitations.tex
@@ -1264,8 +1264,8 @@ E-mail: \href{mailto:ronlevie@post.tau.ac.il}{ronlevie@post.tau.ac.il}\\
 	\begin{enumerate}
 		\item Calculate Hermite's interpolation polynomial and derive the formula for the error.
 		\item Find an approximation of $f'(h)$ by differentiating the sum of the interpolation polynomial and the error.
-	\end{enumerate}<++>
-\end{question}<++>
+	\end{enumerate}
+\end{question}
 
 \begin{solution}
 	\begin{enumerate}[leftmargin=*]
